_sass/theme/_default_dark.scss
/* ==========================================================================
   DARK THEME
   ========================================================================== */

/* Color codes used for the theme */
$gray                       : #7a8288;
$dark-gray                  : mix(#000, $gray, 40%);
$darker-gray                : mix(#000, $gray, 60%);
$light-gray                 : mix(#fff, $gray, 50%);

$background                 : #474747;
$background-light           : mix(#fff, $background, 80%);
$background-lighter         : mix(#fff, $background, 90%);
$text                       : #ffffff;
$link                       : #0ea1c5;
$link-dark                  : mix(#000, $link, 25%);
$link-light                 : mix(#fff, $link, 25%);

/* Color codes used for the site */
$danger-color               : #ee5f5b;
$info-color                 : #2f7f93;
$notice-color               : #7a8288;
$success-color              : #62c462;
$warning-color              : #f89406;

/* Other basic settings for the template */
$border-radius              : 4px;
$box-shadow                 : 0 1px 1px rgba(0, 0, 0, 0.125);
$global-transition          : all 0.2s ease-in-out;
$masthead-height            : 70px;
$navicon-width              : 28px;
$navicon-height             : 4px;
$sidebar-link-max-width     : 250px;
$sidebar-screen-min-width   : 1024px;

/* Dark theme for the site */
html[data-theme="dark"] {
    --global-base-color                 : #{$background};
    --global-bg-color                   : #{$background};
    --global-footer-bg-color            : #{$background};
    --global-border-color               : #{$light-gray};
    --global-dark-border-color          : #{$background-light};
    --global-code-background-color      : #fafafa;
    --global-code-text-color            : #{$darker-gray};
    --global-fig-caption-color          : #{$light-gray};
    --global-link-color                 : #{$link};
    --global-link-color-hover           : #{$link-dark};
    --global-link-color-visited         : #{$link-light};
    --global-masthead-link-color        : #{$text};
    --global-masthead-link-color-hover  : #{$background-light};
    --global-text-color                 : #{$text};
    --global-text-color-light           : #f3f3f3;
    --global-thead-color                : #{$background-lighter};
}

